--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@hookform/resolvers": "^5.1.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/supabase-js": "^2.50.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/react-datepicker": "^7.0.0",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
